<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_marginBottom="4dp"
	app:cardCornerRadius="4dp"
	android:background="@color/defaultWhite">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_margin="4dp">

		<ImageView
			android:id="@+id/obrazokPoznamky"
			android:layout_width="50dp"
			android:layout_height="50dp"
			android:contentDescription="@string/obr"
			android:padding="2dp" />
		<TextView
			android:id="@+id/title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
			android:layout_toEndOf="@+id/obrazokPoznamky"
			android:text="@string/nazovPoznamky"
			android:textColor="@android:color/black"
			android:textSize="20sp"
			android:textStyle="bold"
			android:maxLength="20"/>
		<TextView
			android:id="@+id/description"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/title"
			android:layout_marginStart="8dp"
			android:layout_toEndOf="@+id/obrazokPoznamky"
			android:text="@string/popisPoznamky"
			android:textSize="15sp"
			android:maxLength="30"/>
	</RelativeLayout>
</androidx.cardview.widget.CardView>
