<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:background="@drawable/gradient_backround"
	tools:context=".AddItem">

	<EditText
		android:id="@+id/nazov"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:ems="10"
		android:hint="@string/nazov"
		android:inputType="textPersonName"
		android:maxLength="20"
		android:textAlignment="center"
		android:textColor="@color/defaultWhite"
		android:textColorHint="@color/defaultWhite"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.443"
		android:autofillHints="" />

	<EditText
		android:id="@+id/popisPoznamky"
		android:layout_width="265dp"
		android:layout_height="49dp"
		android:ems="10"
		android:hint="@string/popis"
		android:inputType="textPersonName"
		android:textAlignment="center"
		android:textColor="@color/defaultWhite"
		android:textColorHint="@color/defaultWhite"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.609"
		android:autofillHints="" />

	<Button
		android:id="@+id/pridajTlacidlo"
		android:layout_width="150dp"
		android:layout_height="60dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="8dp"
		android:background="@drawable/button_backround"
		android:text="@string/pridaj"
		android:textAllCaps="false"
		android:textColor="#FFFFFF"
		android:textSize="20sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.542"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.831" />

	<TextView
		android:id="@+id/mesto"
		android:layout_width="120dp"
		android:layout_height="40dp"
		android:layout_marginTop="36dp"
		android:text=""
		android:textAlignment="center"
		android:textColor="@color/defaultWhite"
		android:textSize="30sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.072"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/teplota"
		android:layout_width="120dp"
		android:layout_height="40dp"
		android:layout_marginTop="36dp"
		android:text=""
		android:textColor="@color/defaultWhite"
		android:textSize="30sp"
		android:textAlignment="center"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.841"
		app:layout_constraintStart_toEndOf="@+id/mesto"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/pocitovaTeplota"
		android:layout_width="120dp"
		android:layout_height="20dp"
		android:layout_marginTop="24dp"
		android:text=""
		android:textAlignment="center"
		android:textColor="@color/defaultWhite"
		android:textSize="15sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.917"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/teplota"
		app:layout_constraintVertical_bias="0.009" />

	<TextView
		android:id="@+id/popis"
		android:layout_width="120dp"
		android:layout_height="20dp"
		android:text=""
		android:textAlignment="center"
		android:textColor="@color/defaultWhite"
		android:textSize="15sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.072"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/mesto"
		app:layout_constraintVertical_bias="0.047" />

</androidx.constraintlayout.widget.ConstraintLayout>
